fix(ui): width of settings panel wrap

--- a/src/main/frontend/components/settings.css
+++ b/src/main/frontend/components/settings.css
@@ -84,7 +84,7 @@
       padding: 12px;
 
       @screen sm {
-        min-width: 600px;
+        width: 600px;
       }
 
       > .it {
